--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,610 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body {
+    background-color:#f1f3f4;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  a{
+    cursor: pointer;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
+  .flex {
+    display: flex;
+  
+    justify-content: space-between;
+  }
+  .g6 {
+    gap: 1em;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+  
+  img {
+    border-radius: 1rem;
+    object-fit: cover;
+    width: 96%;
+    border: 4px solid #fbfaff;
+  }
+  .card {
+    border-radius: 1rem;
+    background-color: #ffff;
+    /* padding: 1px; */
+  }
+  .g3 {
+    margin: 3rem 6rem;
+    gap: 2em;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .qaz{
+    display: none;
+  }
+  .nav-button.bold {
+    margin-block-end: 18px;
+  }
+  .nav-button {
+    display: flex;
+    padding: 8px 12px 10px 12px;
+    border-radius: 4px;
+  }
+  .popular {
+    gap: 5px;
+    display: flex;
+    border-radius: 10px;
+    width: 8rem;
+    background-color: rgb(112 102 232);
+    margin-inline-start: -0.7em;
+    position: absolute;
+    margin-block-start: -1.5rem;
+    height: 2rem;
+  }
+  #ff {
+    margin-block-start: 7px;
+    fill: #fff;
+    margin-inline-start: 20px;
+  }
+  .popular::before {
+    transform: rotate(45deg);
+    content: '';
+    position: absolute;
+    width: 24px;
+    background-color: rgb(112 102 232);
+    margin-inline-start: 9px;
+    margin-block-start: 12px;
+    height: 29px;
+    z-index: -1;
+  }
+  h5 {
+    margin-block-start: -3px;
+    color: #fff;
+    /* margin: 0; */
+    font-size: 1.3rem;
+  }
+  .g31 {
+    /* gap: 1em; */
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 0.5fr 0.8fr 0.7fr;
+    padding: 0px 20px;
+  }
+  .g31::after {
+    content: '';
+    position: absolute;
+    border-top: 1px solid #4c4e5d1a;
+    width: 14rem;
+    margin-inline-start: 0em;
+  }
+  p.spcl {
+    font-weight: bold;
+    font-size: 12px;
+    color: #6c757d96;
+  }
+  svg#arrow {
+    fill: rgb(112 102 232);
+      margin: 0;
+      /* font-size: 2em; */
+  }
+  a.page-link {
+    /* width: 100%; */
+    background-color: #ffff;
+    cursor: grab;
+  }
+  
+  .inline {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    gap: 2em;
+  }
+  
+  .grid2 {
+    border-bottom: 1px solid #f1f3f4;
+    padding: 0 1.5rem;
+    grid-template-columns: 1fr;
+    display: grid;
+    background-color: #fbfaff;
+  }
+  .grid21 {
+    border-bottom: 1px solid #f1f3f4;
+    padding: 1.5rem;
+    grid-template-columns: 1fr;
+    display: grid;
+    background-color: #fbfaff;
+    height: 3rem;
+    margin: 0px 6rem;
+  }
+  
+  .active {
+    color: #7066e8;
+    width: 70%;
+    background-color: #eae7f9;
+  }
+  select {
+    background-color: transparent;
+    border: none;
+    font: inherit;
+    color: #4c4e5d;
+  }
+  
+  .nav-button{
+    padding: 8px 12px 10px 12px;
+    border-radius: 4px;
+  }
+  
+  a{
+    text-decoration: none;
+    color: #4c4e5d;
+  }
+  h1{
+    color: #4c4e5d;
+  }
+  
+  .select-h {
+    overflow-y: scroll;
+    max-height: 60vh;
+    width: -moz-fit-content;
+    width: -webkit-fill-available;
+    border: 1px solid #eae7f9;
+    background-color: #eae7f9;
+    margin-block-start: 1em;
+    box-shadow: 1px 1px 3px 0px rgba(112,102,232,1);
+    position: sticky;
+  }
+  .value {
+    cursor: default;
+    padding: 9px 0 4px 0;
+    /* border-bottom: 1px solid #fbfaff; */
+  }
+  
+  .select-h::-webkit-scrollbar {
+    display: none;
+  }
+  .value:hover{
+    z-index: 99;
+    background-color: #eae7f9;
+  }
+  
+  [contenteditable] {
+    outline: 0px solid transparent;
+  }
+  
+  abbr {
+    text-decoration: none;
+  }
+  
+  .rdp {
+    background-color: #eae7f9;
+  }
+  svg {
+    margin-block-start: 3px;
+    
+  }
+  
+  .flend {
+    min-width: max-content;
+    display: grid;
+    grid-template-columns: 1fr 0.2fr;
+    justify-items: flex-start;
+    /* line-height: 1rem; */
+    gap: 1em;
+  }
+  p.address {
+    color: #6c757d96;
+    font-weight: 500;
+    width: 13rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin: 6px 26px;
+  }
+  div.circle>svg {
+    font-size: 1.4rem;
+    /* fill: red; */
+    border: 1px solid #4c4e5d;
+    border-radius: 50%;
+    padding: 5px;
+  }
+  .startf {
+    align-items: baseline;
+    display: inline-flex;
+    min-width: max-content;
+    justify-content: space-between;
+    width: 90%;
+  }
+  .qwer {
+    height: fit-content;
+  }
+  h3 {
+    margin: 10px 0 0 10px;
+    color: rgb(112 102 232);
+    font-size: 26px;
+  }
+  p {
+    color: #4c4e5d;
+  }
+  .startd {
+    align-items: center;
+    display: inline-flex;
+    min-width: max-content;
+    justify-items: flex-start;
+  }
+  p.spc {
+    font-weight: 600;
+    padding-block-start: 14px;
+    color: #6c757d96;
+  }
+  #asdf{
+    margin: 0;
+    fill: none;
+    stroke: #7066e8;
+  }
+  .rdp {
+    z-index: 999;
+    position: absolute;
+    width: -moz-fit-content;
+    width: fit-content;
+    visibility: collapse;
+  }
+  
+  .nheader {
+    margin: 2em 6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: end;
+  }
+  
+  .search-span::before {
+    content: '';
+    border: 1px solid #4c4e5d;
+    /* width: 10rem; */
+    color: aliceblue;
+    width: 13rem;
+    position: absolute;
+    height: 2.4rem;
+    border-radius: 5px;
+    margin-block-start: -7px;
+    margin-inline-start: -7em;
+  }
+  .search-span {
+    
+    height: 3rem;
+    padding-block-start: 2.2em;
+  }
+  
+  .flexy {
+    width: 100%;
+    text-align: start;
+  }
+  
+  .search {
+    padding: 8px 0px 10px 0px;
+    border-radius: 4px;
+    color: #fff;
+    width: 100%;
+    background-color: #7066e8;
+  }
+  .disp{
+    display: none;
+  }
+  
+  
+  @media only screen and (max-width: 600px) {
+    .flex,.inline{
+      flex-direction: column;
+    }
+    div#qwr {
+      font-size: x-large;
+      font-weight: 900;
+  }
+    .g3,.g6,.nheader{
+      grid-template-columns: 1fr;
+    }
+    .hid{
+      display: none !important;
+    }
+    .disp{
+      display: block;
+    }
+    .g3 {
+      margin: 3rem 1rem;
+      
+  }
+  .grid21 {
+    border-bottom: 1px solid #f1f3f4;
+    padding: 1.5rem;
+    grid-template-columns: 1fr;
+    display: grid;
+    background-color: transparent;
+    height: fit-content;
+    margin: 0px 1rem;
+  }
+  .qwer {
+    background-color: #fbfaff;
+    text-align: start;
+    height: 2rem;
+    padding: 0.5em 2em 0;
+  }
+  .nheader {
+    margin: 0px 3em;
+  }
+  .qw{
+    height: 2rem;
+  }
+  .hidden {
+    display: none;
+  }
+  .g2 {
+    height: fit-content;
+  }
+  
+  }
+  
+  
+  @media only screen 
+    and (min-device-width: 612px) 
+    and (max-device-width: 738px) 
+    
+  { 
+      .flex,.inline{
+        flex-direction: column;
+      }
+      div#qwr {
+        font-size: x-large;
+        font-weight: 900;
+    }
+      .g3,.g6,.nheader{
+        grid-template-columns: 1fr 1fr;
+      }
+      .hid{
+        display: none !important;
+      }
+      .disp{
+        display: block;
+      }
+      .g3 {
+        margin: 3rem 1rem;
+        
+    }
+    .grid21 {
+      border-bottom: 1px solid #f1f3f4;
+      padding: 1.5rem;
+      grid-template-columns: 1fr 1fr;
+      display: grid;
+      background-color: transparent;
+      height: fit-content;
+      margin: 0px 1rem;
+    }
+    .qwer {
+      background-color: #fbfaff;
+      text-align: start;
+      height: 2rem;
+      padding: 0.5em 2em 0;
+    }
+    .nheader {
+      margin: 0px 3em;
+    }
+    .qw{
+      height: 2rem;
+    }
+    .hidden {
+      display: none;
+    }
+    .g2 {
+      height: fit-content;
+    }
+  
+  }
+  
+  @media only screen 
+    and (min-device-width: 738px) 
+    and (max-device-width: 911px) {
+      .grid21 {
+        border-bottom: 1px solid #f1f3f4;
+        padding: 1.5rem;
+        grid-template-columns: 1fr;
+        display: grid;
+        background-color: transparent;
+        height: fit-content;
+        margin: 0px 1rem;
+      }
+      .flex,.inline{
+        flex-direction: column;
+      }
+      div#qwr {
+        font-size: x-large;
+        font-weight: 900;
+    }
+      .g3,.nheader{
+        grid-template-columns: 1fr 1fr;
+      }
+      .g6{
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      .hid{
+        display: none !important;
+      }
+      .disp{
+        display: block;
+      }
+      .g3 {
+        margin: 3rem 1rem;
+        
+    }
+  
+    .qwer {
+      background-color: #fbfaff;
+      text-align: start;
+      height: 2rem;
+      padding: 0.5em 2em 0;
+    }
+    .nheader {
+      margin: 0px 3em;
+    }
+    .qw{
+      height: 2rem;
+    }
+    .hidden {
+      display: none;
+    }
+    .g2 {
+      height: fit-content;
+    }
+  
+    }
+
+    .App {
+        text-align: center;
+      }
+      
+      .App-logo {
+        height: 40vmin;
+        pointer-events: none;
+      }
+      
+      @media (prefers-reduced-motion: no-preference) {
+        .App-logo {
+          animation: App-logo-spin infinite 20s linear;
+        }
+      }
+      
+      .App-header {
+        background-color: #282c34;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: calc(10px + 2vmin);
+        color: white;
+      }
+      
+      .App-link {
+        color: #61dafb;
+      }
+      
+      @keyframes App-logo-spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+      
+      
+      nav {
+        display: block;
+        padding-block-end: 0.02rem;
+        /* margin-block-end: 5rem; */
+      }
+      ul.pagination {
+        justify-content: center;
+        margin-block-start: 1rem;
+        align-items: center;
+      }
+      
+      .pagination {
+        --bs-pagination-padding-x: 0.75rem;
+        --bs-pagination-padding-y: 0.375rem;
+        --bs-pagination-font-size: 1rem;
+        --bs-pagination-color: var(--bs-link-color);
+        --bs-pagination-bg: #fff;
+        --bs-pagination-border-width: 1px;
+        --bs-pagination-border-color: #dee2e6;
+        --bs-pagination-border-radius: 0.375rem;
+        --bs-pagination-hover-color: var(--bs-link-hover-color);
+        --bs-pagination-hover-bg: #e9ecef;
+        --bs-pagination-hover-border-color: #dee2e6;
+        --bs-pagination-focus-color: var(--bs-link-hover-color);
+        --bs-pagination-focus-bg: #e9ecef;
+        --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+        --bs-pagination-active-color: #fff;
+        --bs-pagination-active-bg: #0d6efd;
+        --bs-pagination-active-border-color: #0d6efd;
+        --bs-pagination-disabled-color: #6c757d;
+        --bs-pagination-disabled-bg: #fff;
+        --bs-pagination-disabled-border-color: #dee2e6;
+        display: flex;
+        padding-left: 0;
+        list-style: none;
+      }
+      
+      dl, ol, ul {
+        margin-top: 0;
+        margin-bottom: 1rem;
+      }
+      
+      
+      .page-link {
+        padding: 0.5em 1em;
+        /* width: 3rem; */
+      }
+      svg#qsd {
+        fill: rgb(112 102 232);
+      }
+      svg#logo {
+        font-size: 24px;
+        fill: rgb(112 102 232);
+        margin-block-start: 16px;
+      }
+      svg#small {
+        fill: rgb(112 102 232);
+        margin: 0;
+      }
+      .fl {
+        align-items: center;
+        display: inline-flex;
+        padding: 0 1px;
+      }
+      nav.navbar.navbar-expand-lg.bg-light {
+        top: 3rem !important;
+        padding: 2rem;
+        margin-block-end: 5rem;
+    }
+      form {
+    gap: 1em;
+}
+      h2 {
+        color: #4c4e5d;
+        font-size: 24px;
+        margin: auto;
+        text-align: left;
+        margin-inline-start: 25px;
+      }
+      
+      #red{
+        fill: red;
+      }
